--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -16,3 +16,141 @@
 @import url('./badges.css');
 @import url('./back-link.css');
 @import url('./footer.css');
+
+.container .gallery {
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 24px;
+  height: 648px;
+  padding: 24px 36px;
+  column-gap: 24px;
+}
+
+.gallery-item {
+  height: 200px;
+  width: 360px;
+}
+
+.gallery-image {
+  object-fit: cover;
+}
+
+/*======== large image ======== */
+.sl-wrapper .sl-image {
+  left: 50% !important;
+  transform: translateX(-50%) !important;
+  width: 1112px !important;
+  height: 640px !important;
+}
+
+.sl-wrapper .sl-image img {
+  width: 1112px !important;
+  height: 640px !important;
+  object-fit: cover;
+}
+
+.sl-caption {
+  width: 100% !important;
+}
+
+/*======== feedback form ======== */
+
+.feedback-form {
+  display: inline-flex;
+  padding: 24px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 8px;
+  border-radius: 8px;
+  background: #fff;
+  font-family: Montserrat;
+}
+
+.labelFeedback {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  color: #2e2f42;
+  letter-spacing: 0.64px;
+}
+input,
+textarea {
+  box-sizing: border-box;
+}
+.inputEmailField {
+  width: 360px;
+  height: 40px;
+  border-radius: 4px;
+  border: 1px solid #808080;
+  margin-top: 8px;
+  padding-left: 16px;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.64px;
+}
+.inputMessageFeedback {
+  width: 360px;
+  height: 80px;
+  padding-left: 16px;
+  padding-top: 8px;
+  border-radius: 4px;
+  border: 1px solid #808080;
+  margin-top: 8px;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.64px;
+}
+.buttonSubmitInForm {
+  display: flex;
+  padding: 8px 16px;
+  align-items: center;
+  border-radius: 8px;
+  background: #4e75ff;
+  color: #fff;
+  border: none;
+  margin-top: 8px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.64px;
+}
+
+.buttonSubmitInForm:hover {
+  background-color: #6c8cff;
+}
+.buttonSubmitInForm:active {
+  background-color: #4e75ff;
+}
+
+/*field borders*/
+.inputEmailField:hover,
+.inputMessageFeedback:hover {
+  border-color: #000000;
+}
+
+.inputEmailField:active,
+.inputMessageFeedback:active {
+  border-color: #808080;
+}
+
+.inputEmailField:focus-visible,
+.inputMessageFeedback:focus-visible {
+  outline: 0 !important;
+}
+
+.input-container {
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  background-color: transparent;
+  padding-left: 38px;
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
